[package]
edition = "2021"
name = "adventofcode2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.1", features = ["derive"]}
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
test-log = "0.2"


[[bin]]
name = "day01"
path = "src/day01/main.rs"
