[package]
edition = "2021"
name = "adventofcode2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "1.0.1"
clap = {version = "4.1", features = ["derive"]}
env_logger = "0.10"
itertools = "0.10.5"
log = "0.4"

[dev-dependencies]
test-log = "0.2"

[lib]
path = "src/lib/mod.rs"

[[example]]
crate-type = ["bin"]
doc = false
name = "template"
path = "examples/template.rs"
test = true

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"


[[bin]]
name = "day05"
path = "src/day05/main.rs"


[[bin]]
name = "day06"
path = "src/day06/main.rs"


[[bin]]
name = "day07"
path = "src/day07/main.rs"


[[bin]]
name = "day08"
path = "src/day08/main.rs"


[[bin]]
name = "day09"
path = "src/day09/main.rs"


[[bin]]
name = "day10"
path = "src/day10/main.rs"
